cmake_minimum_required(VERSION 3.26)
project(cf)

set(CMAKE_CXX_STANDARD 17)

add_executable(cf cf/contests/cf907-div2/a/main.cpp
        cf/contests/cf907-div2/b/main.cpp
        cf/archive/1879b/main.cpp
        noi/1/2022/oil.cpp
        noi/1/2022/sequence.cpp
        noi/1/2021/tiling.cpp
        template.cpp
        cf/contests/ecf157/a/main.cpp
        cf/contests/ecf157/b/main.cpp
        cf/contests/ecf157/c/main.cpp
        cf/contests/ecf157/d/main.cpp
        cf/contests/ecf157/e/main.cpp
        cf/contests/ecf157/f/main.cpp
        cf/contests/ecf157/g/main.cpp
        noi/1/2022/threediv.cpp
        noi/1/2021/perm.cpp
        noi/1/2020/airline.cpp
        cf/contests/cf908-div2/a/main.cpp
        cf/contests/cf908-div2/b/main.cpp
        cf/contests/cf908-div2/c/main.cpp
        cf/contests/cf908-div2/d/main.cpp
        cf/contests/cf908-div2/e/main.cpp
        cf/contests/cf909-div3/a/main.cpp
        cf/contests/cf909-div3/b/main.cpp
        cf/contests/cf909-div3/c/main.cpp
        cf/contests/cf909-div3/d/main.cpp
        cf/contests/cf909-div3/e/main.cpp
        cf/contests/cf909-div3/f/main.cpp
        cf/contests/cf909-div3/g/main.cpp
        book/max_subarray_sum.cpp
        cf/contests/ecf159/a.cpp
        cf/contests/ecf159/b.cpp
        cf/contests/ecf159/c.cpp
        cf/contests/ecf159/d.cpp
        cses/1068.cpp
        cses/1083.cpp
        cses/1069.cpp
        cses/1094.cpp
        cses/1070.cpp
        cses/1071.cpp
        cses/1072.cpp
)
