cmake_minimum_required(VERSION 3.26)
project(codeforces)

set(CMAKE_CXX_STANDARD 17)

add_executable(codeforces codeforces/contests/cf907-div2/a/main.cpp
        codeforces/contests/cf907-div2/b/main.cpp
        codeforces/archive/1879b/main.cpp
        noi/1/2022/oil.cpp
        noi/1/2022/sequence.cpp
        noi/1/2021/tiling.cpp
        template.cpp
        codeforces/contests/ecf157/a/main.cpp
        codeforces/contests/ecf157/b/main.cpp
        codeforces/contests/ecf157/c/main.cpp
        codeforces/contests/ecf157/d/main.cpp
        codeforces/contests/ecf157/e/main.cpp
        codeforces/contests/ecf157/f/main.cpp
        codeforces/contests/ecf157/g/main.cpp
        noi/1/2022/threediv.cpp
        noi/1/2021/perm.cpp
        noi/1/2020/airline.cpp
        codeforces/contests/cf908-div2/a/main.cpp
        codeforces/contests/cf908-div2/b/main.cpp
        codeforces/contests/cf908-div2/c/main.cpp
        codeforces/contests/cf908-div2/d/main.cpp
        codeforces/contests/cf908-div2/e/main.cpp
        codeforces/contests/cf909-div3/a/main.cpp
        codeforces/contests/cf909-div3/b/main.cpp
        codeforces/contests/cf909-div3/c/main.cpp
        codeforces/contests/cf909-div3/d/main.cpp
        codeforces/contests/cf909-div3/e/main.cpp
        codeforces/contests/cf909-div3/f/main.cpp
        codeforces/contests/cf909-div3/g/main.cpp
        book/max_subarray_sum.cpp
        codeforces/contests/ecf159/a.cpp
        codeforces/contests/ecf159/b.cpp
        codeforces/contests/ecf159/c.cpp
        codeforces/contests/ecf159/d.cpp
        cses/1068.cpp
        cses/1083.cpp
        cses/1069.cpp
        cses/1094.cpp
        cses/1070.cpp
        cses/1071.cpp
        cses/1072.cpp
        cses/1754.cpp
        codeforces/contests/cf913-div3/a.cpp
        codeforces/contests/cf913-div3/b.cpp
        codeforces/contests/cf913-div3/c.cpp
        codeforces/contests/cf913-div3/d.cpp
        codeforces/contests/cf913-div3/g.cpp
        codeforces/contests/cf914-div2/a.cpp
        codeforces/contests/cf914-div2/b.cpp
        codeforces/contests/cf914-div2/c.cpp
        codeforces/contests/cf914-div2/d.cpp
        cses/1755.cpp
        cses/2205.cpp
        book/longest_increasing_subsequence.cpp
        noi/1/2023/best_subarray.cpp
        noi/1/2023/bitstack.cpp
        noi/1/2009/color.cpp
        noi/1/2009/roads.cpp
        notebook/sums_to_n.cpp
        notebook/gcd.cpp
        codeforces/contests/cf919-div2/A_Satisfying_Constraints.cpp
        codeforces/contests/cf919-div2/B_Summation_Game.cpp
        codeforces/contests/cf920-div3/A_Square.cpp
        codeforces/contests/cf920-div3/B_Arranging_Cats.cpp
        codeforces/contests/cf920-div3/C_Sending_Messages.cpp
        codeforces/contests/cf920-div3/D_Very_Different_Array.cpp
        codeforces/contests/cf920-div3/E_Eat_the_Chip.cpp
)
